segunda practica tercera sesion segundo commit

--- a/Desktop/grupo N° 01/practicaN2-sesionN3/.vscode/settings.json
+++ b/Desktop/grupo N° 01/practicaN2-sesionN3/.vscode/settings.json
@@ -30,6 +30,7 @@
   "files.associations": {
     "*.tcc": "cpp",
     "string": "cpp",
-    "istream": "cpp"
+    "istream": "cpp",
+    "iostream": "cpp"
   }
 }
